syntax = "proto3";

package ethmonitor;

import "google/protobuf/empty.proto";
import "common.proto";
import "blockchain_status_service.proto";

option go_package = "github.com/Troublor/go-ethereum-castle/ethmonitor/rpc";

service P2PNetworkService {
  rpc notifyNodeStart(Node) returns (google.protobuf.Empty) {}
  rpc addPeerControl(stream AddPeerControlMsg) returns (stream AddPeerControlMsg) {}
  rpc removePeerControl(stream RemovePeerControlMsg) returns (stream RemovePeerControlMsg) {}
}

message Node{
  Role role = 1;
  string url = 2;
  ChainHead head = 3;
}

message AddPeerControlMsg {
  Role role = 1;
  string id = 2;
  string url = 3;
  string peer_id = 4;
  Error err = 5;
}

message RemovePeerControlMsg {
  Role role = 1;
  string id = 2;
  string url = 3;
  string peer_id = 4;
  Error err = 5;
}
